--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -3,8 +3,8 @@
     --mainfont-nexon: "nexonLv1";
   
     --black: #000;
-    --black100: #000;
-    --black200: #000;
+    --black100: #111;
+    --black200: #222;
     --black300: #000;
     --black400: #000;
     --black500: #000;
@@ -15,6 +15,8 @@
     --white300: #fff;
     --white400: #fff;
     --white500: #fff;
+
+    --red: #f00;
     
     // 폰트 셋팅
     font-family: var(--mainfont-nanum), var(--mainfont-nexon);
