[feat] scss 재구성 및 기본 세팅 틀 설정

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,3 +10,6 @@
 // section
 @import "section/layout";
 @import "section/header";
+@import "content/video";
+@import "section/video_main";
+@import "content/videoDetailModal"
