--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -1,24 +1,36 @@
+#main-container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+}
+
+#main-container2 {
+    width: 80%;
+    height: 100%;
+    box-sizing: border-box;    
+    padding: 30px;
+}
+
 #header {
-    position: fixed;
     left: 0;
     top: 0;
-    width: 260px;
+    width: 20%;
     height: 100%;
     overflow-y: auto;
     z-index: 10000;
     background-color: black;
 }
 
-#main {
-    max-width: 2000px;
-    min-height: 100vh;
-    margin: 0 auto;
-    padding-left: 260px;
+#main {        
+    width: 100%;
+    height: 100%;
+    margin: 0 auto; 
     background-color: #111;
 }
 
 #footer {
     text-align: center;
-    background-color: #333;
-    padding: 20px 20px 20px 260px;
+    background-color: #333;    
+    height: 20%;
+    width: 100%;
 }
