[feat] 웹소켓 채팅 기능 추가

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -12,4 +12,5 @@
 @import "section/header";
 @import "content/video";
 @import "section/video_main";
-@import "content/videoDetailModal"
+@import "content/videoDetailModal";
+@import "content/content"
