[feat] 파일 추가 모달 및 비디오 디테일 페이지에서 띄우게 설정

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,4 +13,5 @@
 @import "content/video";
 @import "section/video_main";
 @import "content/videoDetailModal";
-@import "content/content"
+@import "content/content";
+@import "content/floatingButton";
