--- a/src/assets/scss/section/_video_main.scss
+++ b/src/assets/scss/section/_video_main.scss
@@ -3,27 +3,105 @@ $border-radius: 8px;
 $box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 $gap: 16px;
 $text-color: #555;
+$button-hover-color: #eaeaea;
+$chat-font-size: 14px;
+
+#video-chat-container {
+    display: flex;
+    align-items: flex-start;
+}
 
 #main-video {
     width: 100%;
-}
-
-#main-video iframe {
-    width: 100%;
-    height: 450px;
+    transition: width 0.3s ease; // 부드러운 전환 효과 추가
+    iframe {
+        width: 100%;
+        height: 450px;
+        border: 1px solid $border-color;
+        border-radius: $border-radius;
+        box-shadow: $box-shadow;
+    }
 }
 
 #video-title {
     font-size: 24px;
     margin: 10px 0;
+    color: $text-color; // 텍스트 색상 통일
 }
 
 #video-description {
     font-size: 16px;
-    color: #555;
+    color: $text-color; // 텍스트 색상 통일
 }
 
 #video-comment {
     height: 500px;
 }
 
+#chat-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 20%;
+    border-left: 1px solid $border-color; // 경계선 색상 통일
+    border-right: 1px solid $border-color; // 경계선 색상 통일
+    border-top: 1px solid $border-color; // 경계선 색상 통일
+    margin-left: 10px;
+}
+
+#chat-container.hidden {
+    transform: translateX(100%); /* 화면 밖으로 이동 */
+}
+
+#chat-toggle-button {
+    margin-bottom: $gap;
+    padding: 8px 16px;
+    font-size: 16px;
+    border: 1px solid $border-color;
+    border-radius: $border-radius;
+    color: $text-color; // 버튼 텍스트 색상 통일
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    
+    
+}
+
+#chat-container p {
+    margin: 0;
+    padding: 5px 0;
+    font-size: $chat-font-size;
+    color: $text-color; // 텍스트 색상 통일
+}
+
+#chat-container h4 {
+    font-size: 16px;
+    margin: 0 0 8px;
+    color: $text-color; // 텍스트 색상 통일
+}
+
+#chat-container .chat-message {    
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+#chat-container-input-box {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid $border-color; // 경계선 색상 통일
+    border-bottom: 1px solid $border-color; // 경계선 색상 통일
+    border-right: 1px solid $border-color; // 경계선 색상 통일
+}
+
+#chat-container-input-box input {
+    width: 100%;
+    height: 3vh;
+}
+
+#chat-messages {
+    flex-grow: 1;
+    height: 60vh;
+    overflow-y: auto;
+    padding: 16px;
+    color: $text-color; // 메시지 텍스트 색상 통일
+}
